<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sign_btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:tint="#7ea6e0"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_btn_back">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:gravity="center"
            android:text="@string/recyclerView_Radio"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:background="@drawable/sign_recycleview"
            android:gravity="center"
            android:text="@string/sign_recycleView_Left"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sign_recycleview"
            android:gravity="center"
            android:text="@string/sign_recycleView_Right"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sign_recycleView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_textView_NoFound"
        android:text="@string/sign_textview_NoData"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/noto_sans"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>

</androidx.constraintlayout.widget.ConstraintLayout>