<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheetContainer"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottom_sheet_Title"
        android:text="@string/sign_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ececec" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="30dp"
                android:text="@string/bottom_sheet_Title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="@font/noto_sans"
                android:layout_width="130dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bottom_sheet_SelectedCourse"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAppearance="?attr/title"
                android:fontFamily="@font/noto_sans"
                android:layout_marginEnd="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ececec" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_btn_Send"
        android:text="@string/bottom_sheet_Button"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="@font/noto_sans"
        android:backgroundTint="#03A9F4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"/>

</LinearLayout>